# mem0-agentic-enhancement-plugin

./: README.md  pyproject.toml
mem0_lifecycle/: __init__.py  decay.py  server.py
mem0_lifecycle/scripts/: mem0-daily-cleanup.sh
plugins/memory/mem0/: README.md  __init__.py
